fix text-align & opti mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,3 +5,59 @@
 html {
   font-family: 'Inter', 'Noto Sans', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica Neue', 'Arial', 'Noto Sans', 'sans-serif';
 }
+
+.py-1\.5 {
+    padding-top: 0.375rem;
+    padding-bottom: 0.375rem;
+}
+
+button {
+    transition: color, background-color 0.2s;
+}
+
+button:focus {
+    outline: none;
+}
+
+.button {
+    @apply border-2 border-orange-600 text-orange-600 bg-white rounded-lg
+        outline-none leading-tight font-semibold text-base px-2 py-1 font-sans;
+    .button-icon {
+        @apply hidden;
+    }
+}
+
+@screen md {
+    .button {
+        @apply text-xl px-4;
+        .button-icon {
+            @apply mr-1 fill-current align-middle inline-block;
+            width: 1.1rem;
+            margin-top: -0.3rem;
+        }
+    }
+}
+
+.button.red {
+    @apply border-red-500 text-red-500;
+}
+
+.button:hover {
+    @apply bg-orange-600 text-white;
+}
+
+.button.red:hover {
+    @apply bg-red-500;
+}
+
+.router-fade-enter-active, .router-fade-leave-active {
+    transition: opacity .2s ease;
+}
+
+.router-fade-enter, .router-fade-leave-to {
+    opacity: 0;
+}
+
+.open-sans {
+    font-family: -apple-system, BlinkMacSystemFont, 'Open Sans', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+}
